--- a/src/main.css
+++ b/src/main.css
@@ -15,7 +15,7 @@ body {
   padding: 0;
 }
 
-div {
+* {
   font-family: 'Cascadia Code', Segoe Fluent Icons, '喵字果汁体', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !important;
 }
 
@@ -70,18 +70,4 @@ textarea {
     background-color: #303133;
     color: #fff;
   }
-}
-
-.commit-msg {
-  width: fit-content;
-  background: white;
-  color: #c678dd;
-  padding: 10px;
-  border-radius: 10px;
-  box-shadow: 0px 4px 4px rgb(0 0 0 / 10%);
-}
-
-textarea {
-  border-radius: 10px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, .1);
 }
