--- a/src/main.css
+++ b/src/main.css
@@ -1,8 +1,3 @@
-@font-face {
-  font-family: '喵字果汁体';
-  src: url(https://cdn.jsdelivr.net/gh/caolib/cdn@main/fonts/MiaoZi-GuoZhiTi.ttf);
-}
-
 :root {
   --blue: rgb(88, 164, 246);
   --light: #fff;
@@ -16,7 +11,7 @@ body {
 }
 
 * {
-  font-family: 'Cascadia Code', Segoe Fluent Icons, '喵字果汁体', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !important;
+  font-family: 'Cascadia Code', Segoe Fluent Icons, '喵字果汁体', 黑体, 微软雅黑, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !important;
 }
 
 button {
